<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FormNoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/color_navbar"
            android:elevation="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal"
                android:text="@string/to_do"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/border_form"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/appBar"
            tools:layout_editor_absoluteX="25dp">

            <ImageView
                android:id="@+id/imageViewChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rectangle"
                android:src="@drawable/ic_baseline_radio_button_unchecked_24"
                app:layout_constraintBottom_toBottomOf="@id/etAddDetailsTask"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etAddDetailsTask" />

            <EditText
                android:id="@+id/etAddDetailsTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:focusableInTouchMode="true"
                android:hint="@string/add_judul"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewChat"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/calender"
                android:src="@drawable/ic_baseline_date_range_24"
                app:layout_constraintBottom_toBottomOf="@id/btnAddDateTask"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnAddDateTask" />


            <Button
                android:id="@+id/btnAddDateTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/add_date"
                android:minHeight="20dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btnRemoveDateTask"
                app:layout_constraintStart_toEndOf="@id/imageViewDate"
                app:layout_constraintTop_toBottomOf="@+id/etAddDetailsTask" />

            <ImageButton
                android:id="@+id/btnRemoveDateTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_close_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btnAddDateTask"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnAddDateTask" />

            <ImageView
                android:id="@+id/imageViewSubTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/done"
                android:src="@drawable/ic_baseline_subdirectory_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/etAddDetailsTask2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etAddDetailsTask2" />

            <EditText
                android:id="@+id/etAddDetailsTask2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:focusableInTouchMode="true"
                android:hint="@string/add_details"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewSubTask"
                app:layout_constraintTop_toBottomOf="@+id/btnAddDateTask" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_btn"
            android:text="@string/konfirmasi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_btn"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>