...
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@android:drawable/ic_menu_delete" />
    <ImageView
        android:id="@+id/update"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        app:srcCompat="@android:drawable/ic_menu_edit" />
...
