...
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        tools:layout_editor_absoluteX="16dp">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recylcerView"
            android:layout_width="match_parent"
            android:layout_height="648dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar"
...
